// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'long enough (1)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const classes = tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
ex massa hendrerit eu posuere eu volutpat id neque
pellentesque\`;
</script>
"
`;

exports[`'long enough (2)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const Bar = tw.foo\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
ex massa hendrerit eu posuere eu volutpat id neque
pellentesque\`;
</script>
"
`;

exports[`'long enough (3)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const Bar = tw(
  Foo,
)\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
ex massa hendrerit eu posuere eu volutpat id neque
pellentesque\`;
</script>
"
`;

exports[`'near boundary (1)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const classes = tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin\`;
</script>
"
`;

exports[`'near boundary (2)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const Bar = tw.foo\`lorem ipsum dolor sit amet consectetur adipiscing elit proin\`;
</script>
"
`;

exports[`'near boundary (3)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const Bar = tw(
  Foo,
)\`lorem ipsum dolor sit amet consectetur adipiscing elit proin\`;
</script>
"
`;

exports[`'short enough (1)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const classes = tw\`lorem ipsum dolor sit amet\`;
</script>
"
`;

exports[`'short enough (2)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const Bar = tw.foo\`lorem ipsum dolor sit amet\`;
</script>
"
`;

exports[`'short enough (3)' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const Bar = tw(Foo)\`lorem ipsum dolor sit amet\`;
</script>
"
`;

exports[`'syntax variants - written as an objec…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<script setup lang="ts">
const classes = {
  short: tw\`lorem ipsum dolor sit amet\`,
  near: tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin\`,
  long: tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
  ex massa hendrerit eu posuere eu volutpat id neque
  pellentesque\`,
};
</script>
"
`;
